# prueba-guane

./: .gitignore  LICENSE  database-compose.yml  docker-compose.yml
database/: docker-compose.yml  pyproject.toml  requirements.txt
database/app/: main.py
database/app/ABC/: rules.py
database/app/ABC/crud/: __init__.py  crud.py  expense.py  expense_category.py  income.py  income_category.py  user.py
database/app/ABC/models/: __init__.py  base.py  expense.py  expense_category.py  income.py  income_category.py  user.py
database/app/api/middlewares/: db.py  user.py
database/app/api/v1/: router.py
database/app/api/v1/routes/: auth.py  (+5 more)
database/app/core/: config.py  init_db.py  logging.py
database/app/core/settings/: __init__.py  app.py  base.py  development.py
database/app/domain/errors/: base.py  expense_category.py  expenses.py  income.py
database/app/domain/models/: __init__.py  base.py  expense.py  expense_category.py  income.py
database/app/domain/rules/: __init__.py  base.py  expense.py  expense_category.py  income.py  income_category.py  user.py
database/app/domain/schemas/: __init__.py  expense.py  expense_category.py  income.py  user.py
database/app/models/: base.py  user.py
database/app/schemas/: __init__.py  expense.py  expense_category.py  general.py  income.py  income_category.py  user.py
database/app/services/: __init__.py  base.py  expense.py  expense_category.py  income.py  income_category.py  user.py
database/app/services/crud/: __init__.py  base.py  expense.py  expense_category.py  income.py  income_category.py  user.py
database/app/services/security/: __init__.py  bcrypt.py
database/docker/: .env
database/tests/services/: test_income.py  test_user.py
database/tests/utils/: classes.py  data.py
gateway/: dockerfile  pyproject.toml  requirements.txt
gateway/app/: main.py
gateway/app/api/middlewares/: http.py  jwt_bearer.py
gateway/app/api/v1/: router.py
gateway/app/core/: config.py
gateway/app/core/settings/: app.py  development.py  production.py
gateway/app/schemas/: __init__.py  income_category.py  user.py
gateway/app/services/security/: __init__.py  jwt.py
gateway/app/services/utils/: __init__.py  expense.py
notifications/: docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
notifications/app/api/v1/: router.py
notifications/app/core/: celery_worker.py  logging.py
notifications/app/core/settings/: app.py  test.py
notifications/app/schemas/: __init__.py  notification.py
(+51 files in other folders)
