[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["Simón <simon.garcial@udea.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
celery = {extras = ["redis"], version = "^5.2.7"}
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
flower = "^1.2.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
